// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusIndicator render animated 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.cache-a3tww4-Dot-cssAnimation {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #22c8a2;
  -webkit-animation: animation-0 linear 1s infinite;
  animation: animation-0 linear 1s infinite;
}

<div
    class="e1ainewa0 cache-a3tww4-Dot-cssAnimation"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render available 1`] = `
<DocumentFragment>
  .cache-fvgqib-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #22c8a2;
}

<div
    class="e1ainewa0 cache-fvgqib-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render creating 1`] = `
<DocumentFragment>
  .cache-13eqyq3-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e1ainewa0 cache-13eqyq3-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render deleting 1`] = `
<DocumentFragment>
  .cache-13eqyq3-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e1ainewa0 cache-13eqyq3-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render deployed 1`] = `
<DocumentFragment>
  .cache-fvgqib-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #22c8a2;
}

<div
    class="e1ainewa0 cache-fvgqib-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render disk_full 1`] = `
<DocumentFragment>
  .cache-mnzkzr-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #dd3252;
}

<div
    class="e1ainewa0 cache-mnzkzr-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render error 1`] = `
<DocumentFragment>
  .cache-mnzkzr-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #dd3252;
}

<div
    class="e1ainewa0 cache-mnzkzr-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render locked 1`] = `
<DocumentFragment>
  .cache-mnzkzr-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #dd3252;
}

<div
    class="e1ainewa0 cache-mnzkzr-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render pending 1`] = `
<DocumentFragment>
  .cache-13eqyq3-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e1ainewa0 cache-13eqyq3-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render ready 1`] = `
<DocumentFragment>
  .cache-fvgqib-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #22c8a2;
}

<div
    class="e1ainewa0 cache-fvgqib-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render running 1`] = `
<DocumentFragment>
  .cache-fvgqib-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #22c8a2;
}

<div
    class="e1ainewa0 cache-fvgqib-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render snapshotting 1`] = `
<DocumentFragment>
  .cache-13eqyq3-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e1ainewa0 cache-13eqyq3-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render starting 1`] = `
<DocumentFragment>
  .cache-13eqyq3-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e1ainewa0 cache-13eqyq3-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render stopped 1`] = `
<DocumentFragment>
  .cache-lwbu01-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #f6f6f8;
}

<div
    class="e1ainewa0 cache-lwbu01-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render stopped_in_place 1`] = `
<DocumentFragment>
  .cache-zpqexc-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #ff8c69;
}

<div
    class="e1ainewa0 cache-zpqexc-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render stopping 1`] = `
<DocumentFragment>
  .cache-13eqyq3-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e1ainewa0 cache-13eqyq3-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render unavailable 1`] = `
<DocumentFragment>
  .cache-mnzkzr-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #dd3252;
}

<div
    class="e1ainewa0 cache-mnzkzr-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render unknow 1`] = `
<DocumentFragment>
  .cache-13eqyq3-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e1ainewa0 cache-13eqyq3-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render updating 1`] = `
<DocumentFragment>
  .cache-13eqyq3-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e1ainewa0 cache-13eqyq3-Dot"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render warning 1`] = `
<DocumentFragment>
  .cache-13eqyq3-Dot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e1ainewa0 cache-13eqyq3-Dot"
  />
</DocumentFragment>
`;
